application.yml 부적합한 열 유형 오류 jdbc-type-for-null: "NULL" 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,5 +26,5 @@ mybatis:
   - mybatis/mappers/*.xml
   type-aliases-package: com.last.vo, com.last.dto
   configuration:
-    jdbc-type-for-null: null
+    jdbc-type-for-null: "NULL"
     log-impl: org.apache.ibatis.logging.log4j2.Log4j2Impl
